# mangrel

./: .KM.hs.swp  .Mangrel.cabal.swp  KM.hs  Mangrel.cabal  README.md  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/1f11c7c9/: cabal_macros.h
.stack-work/ghci/4c762e82/: cabal_macros.h
.stack-work/ghci/507fbca4/: cabal_macros.h
.stack-work/ghci/5778de09/: cabal_macros.h
.stack-work/ghci/6782cb73/: cabal_macros.h
.stack-work/ghci/7f72d91e/: cabal_macros.h
.stack-work/ghci/992d2bf1/: cabal_macros.h
.stack-work/ghci/e571c859/: cabal_macros.h
.stack-work/ghci/f040ca95/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/c575562534f44701ec7c1c264c42fb5a0bff555089c133c815f47dfef3cde947/8.8.2/pkgdb/: Mangrel-0.1.0.0-XZQ4BVbSgCGAPxX4I0jZN.conf  package.cache
src/: .Aux.hs.swp  .KM.hs.swp  .Mangrel.hs.swp  Aux.hs  KM.hs  Kmeans.hs  Mangrel.hs
