name:                Mangrel
version:             0.1.0.0
homepage:            
license:             MIT
license-file:        LICENSE
author:              Willis Hoke
maintainer:          willishoke@gmail.com
copyright:           2020 Willis Hoke
category:            Image Processing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Mangrel
  hs-source-dirs:      src
  main-is:             Mangrel.hs
  other-modules:       KM
  default-language:    Haskell2010
  ghc-options:        -O2
  build-depends:       base >= 4.7 && < 5, 
                       JuicyPixels,
                       gloss,
                       bytestring,
                       vector,
                       vector-split,
                       split,
                       random
